Fix: issue with scrollbar bg

--- a/src/scss/config/html.scss
+++ b/src/scss/config/html.scss
@@ -1,7 +1,7 @@
 @mixin scrollbars {
   &::-webkit-scrollbar {
     width: 0.5rem;
-    background-color: rgb(234, 143, 205, 0.25);
+    background-color: rgb(0, 0, 0, 0.05);
   }
   &::-webkit-scrollbar-thumb {
     background-color: var(--color-secondary);
